added fishy redirector

--- a/sidepanel.html
+++ b/sidepanel.html
@@ -2,12 +2,19 @@
 <html>
 
 <head>
-    <title>My SidePanel</title>
+    <title>CarpySafe Control Centre</title>
 </head>
 
 <body>
-    <h1>All sites sidepanel extension</h1>
-    <p>This side panel is enabled on all sites</p>
+    <h1>CarpySafe Control Centre</h1>
+    <h2>Safety Status</h2>
+    <p id="status">No suspicious activity detected</p>
+    <h2>Safety Report</h2>
+    <p id="report">No report generated</p>
+
+
+
+    <script src="src/sidepanel.js"></script>
 </body>
 
 </html>
