added a bunch of stuff idrk

--- a/fishy.html
+++ b/fishy.html
@@ -42,7 +42,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="warning">Warning: You are visiting a potentially dangerous site!</div>
+        <div class="warning">Warning: You may be visiting a dangerous site!</div>
         <div class="report" id="safety-report">Loading safety report...</div>
         <a href="#" id="proceed-link" class="proceed-link">Proceed at your own risk</a>
     </div>
