--- a/hello.html
+++ b/hello.html
@@ -1,6 +1,15 @@
-<html>
-  <body>
-    <h1>Hello Extensions</h1>
-  <div>This is a test</div>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CarpySafe</title>
+</head>
+<body>
+    <h1>CarpySafe</h1>
+    <div></div>
+    <button id="generate-report">Generate Safety Report</button>
+    
+    <script type="module" src="src/hello.js"></script>
+</body>
 </html>
