--- a/fishy.html
+++ b/fishy.html
@@ -39,6 +39,7 @@
             text-decoration: none;
         }
     </style>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
 <body>
     <div class="container">
