--- a/fishy.html
+++ b/fishy.html
@@ -39,7 +39,6 @@
             text-decoration: none;
         }
     </style>
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -48,6 +47,6 @@
         <a href="#" id="proceed-link" class="proceed-link">Proceed at your own risk</a>
     </div>
     
-    <script src="src/fishy.js"></script>
+    <script type="module" src="src/fishy.js"></script>
 </body>
 </html>
